# technical-case-rust

./: .env  Cargo.toml  Dockerfile  README.md  backupdock  compose.yml
migrations/: 20231107124354_init.sql
scripts/: run.sh  run2.sh
src/: lib.rs  main.rs
src/app_state/: mod.rs
src/configuration/: mod.rs
src/controller/: mod.rs  tibber_developer_test.rs
src/models/: mod.rs  robot_status.rs
src/open_api/: mod.rs
src/requests/: enter_path_request.rs  mod.rs
src/robot/: map_direction.rs  map_point.rs  mod.rs
src/service/: mod.rs  robot_service.rs
src/utils/: line.rs  mod.rs  position.rs
tests/: integration_test.rs  line_test.rs  robot_service_test.rs
