[package]
name = "technical-case-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0", features = [
    "tokio",
    "tower-log",
    "query",
    "json",
    "macros",
] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sqlx = { version = "0", features = [
    "runtime-tokio-rustls",
    "any",
    "postgres",
    "chrono",
    "migrate",
    "macros",
] }
dotenvy = "0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
utoipa = { version = "5", features = [
    "axum_extras",
    "chrono",
    "uuid",
    "openapi_extensions",
] }
utoipa-swagger-ui = { version = "9", features = ["axum"] }
hyper = { version = "1", features = ["server"] }
clap = { version = "4", features = ["derive", "env"] }

[dev-dependencies]
tokio-macros = { version = "2" }
tower = { version = "0", features = ["full"] }
hyper = { version = "1", features = ["full"] }
http-body-util = { version = "0" }

[profile.dev.package."*"]
opt-level = 3

[profile.release]
strip = "symbols"
